--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.eduContainer {
+.eduContainer,
+.jobContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-auto-rows: 0;
   column-gap: 25px;
   row-gap: 10px;
   background-color: wheat;
@@ -10,6 +10,13 @@
   padding: 10px;
   padding-bottom: 3px;
   margin-bottom: 10px;
+}
+.eduContainer {
+  grid-auto-rows: 0;
+}
+.jobContainer {
+  grid-template-rows: repeat(4, 1fr);
+  row-gap: 0px;
 }
 .inputContainer {
   display: flex;
@@ -19,6 +26,13 @@
   display: flex;
   align-items: center;
   justify-content: left;
+}
+#descriptionContainer {
+  grid-column: 1/-1;
+}
+.description {
+  resize: none;
+  height: 50px;
 }
 .deleteBtn {
   width: 100px;
