--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
 .eduContainer,
-.jobContainer {
+.jobContainer,
+.personalInfoContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   column-gap: 25px;
   row-gap: 10px;
   background-color: wheat;
-  width: 500px;
+  width: 600px;
   padding: 10px;
   padding-bottom: 3px;
   margin-bottom: 10px;
   font-size: 1.2rem;
+}
+.personalInfoContainer {
+  grid-template-rows: 1fr 1fr 5px;
 }
 .eduContainer {
   grid-auto-rows: 0;
@@ -22,6 +26,15 @@
   display: flex;
   flex-direction: column;
 }
+.input {
+  height: 25px;
+  border-radius: 15px;
+  border: none;
+  font-size: 1.2rem;
+  padding: 5pt;
+  padding-left: 8pt;
+}
+
 .btnWrapper {
   display: flex;
   align-items: center;
@@ -35,9 +48,14 @@
   height: 50px;
 }
 .deleteBtn {
-  width: 100px;
+  width: 150px;
   height: 35px;
+  border-radius: 15px;
+  border: none;
   padding: 0;
+  background-color: lightcoral;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 .deleteBtn:hover {
   border: none;
@@ -45,7 +63,4 @@
   color: white;
   font-weight: bold;
   background-color: red;
-}
-#schoolName {
-  background-color: white;
 }
