--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@
 .inputContainer {
   display: flex;
   flex-direction: column;
+  gap: 3px;
+}
+.inputContainer > :nth-child(1) {
+  font-size: 1.3rem;
 }
 .input {
   height: 25px;
@@ -63,4 +67,30 @@
   color: white;
   font-weight: bold;
   background-color: red;
+}
+
+.addMoreBtn,
+#submitBtn {
+  border-radius: 15px;
+  border: none;
+  width: 250px;
+  background-color: lightgreen;
+  font-weight: bold;
+  padding: 15px;
+  font-size: 1rem;
+}
+
+.addMoreBtn:hover {
+  background-color: green;
+  color: white;
+  cursor: pointer;
+}
+
+#submitBtn {
+  background-color: lightblue;
+}
+#submitBtn:hover {
+  background-color: blue;
+  color: white;
+  cursor: pointer;
 }
