--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+:root {
+  font-family: sans-serif;
+}
+#pageHeader {
+  font-size: 2.8rem;
+}
+.inputHeader {
+  font-size: 2rem;
+}
 .eduContainer,
 .jobContainer,
 .personalInfoContainer {
@@ -73,11 +82,11 @@
 #submitBtn {
   border-radius: 15px;
   border: none;
-  width: 250px;
+  width: 260px;
   background-color: lightgreen;
   font-weight: bold;
   padding: 15px;
-  font-size: 1rem;
+  font-size: 1.1em;
 }
 
 .addMoreBtn:hover {
@@ -88,6 +97,7 @@
 
 #submitBtn {
   background-color: lightblue;
+  font-size: 1.1rem;
 }
 #submitBtn:hover {
   background-color: blue;
