--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,74 @@
-.eduContainer {
+:root {
+  font-family: sans-serif;
+}
+#pageHeader {
+  font-size: 2.8rem;
+}
+.inputHeader {
+  font-size: 2rem;
+}
+.eduContainer,
+.jobContainer,
+.personalInfoContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-auto-rows: 0;
   column-gap: 25px;
   row-gap: 10px;
   background-color: wheat;
-  width: 500px;
+  width: 600px;
   padding: 10px;
   padding-bottom: 3px;
   margin-bottom: 10px;
+  font-size: 1.2rem;
+}
+.personalInfoContainer {
+  grid-template-rows: 1fr 1fr 5px;
+}
+.eduContainer {
+  grid-auto-rows: 0;
+}
+.jobContainer {
+  grid-template-rows: repeat(4, auto);
 }
 .inputContainer {
   display: flex;
   flex-direction: column;
+  gap: 3px;
 }
+.inputContainer > :nth-child(1) {
+  font-size: 1.3rem;
+}
+.input {
+  height: 25px;
+  border-radius: 15px;
+  border: none;
+  font-size: 1.2rem;
+  padding: 5pt;
+  padding-left: 8pt;
+}
+
 .btnWrapper {
   display: flex;
   align-items: center;
   justify-content: left;
 }
+#descriptionContainer {
+  grid-column: 1/-1;
+}
+.description {
+  resize: none;
+  height: 50px;
+}
 .deleteBtn {
-  width: 100px;
+  width: 150px;
   height: 35px;
+  border-radius: 15px;
+  border: none;
   padding: 0;
+  background-color: lightcoral;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 .deleteBtn:hover {
   border: none;
@@ -32,6 +77,30 @@
   font-weight: bold;
   background-color: red;
 }
-#schoolName {
-  background-color: white;
+
+.addMoreBtn,
+#submitBtn {
+  border-radius: 15px;
+  border: none;
+  width: 260px;
+  background-color: lightgreen;
+  font-weight: bold;
+  padding: 15px;
+  font-size: 1.1em;
+}
+
+.addMoreBtn:hover {
+  background-color: green;
+  color: white;
+  cursor: pointer;
+}
+
+#submitBtn {
+  background-color: lightblue;
+  font-size: 1.1rem;
+}
+#submitBtn:hover {
+  background-color: blue;
+  color: white;
+  cursor: pointer;
 }
