--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,8 @@
   --kombuGreen: #313715;
 }
 #pageContainer {
-  display: flex;
-  align-items: left;
-  justify-content: left;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   margin-left: 30px;
 }
 #pageHeader {
@@ -117,4 +116,9 @@
   background-color: #2564f7;
   color: white;
   cursor: pointer;
+}
+
+#interviewSVG {
+  position: sticky;
+  top: 0;
 }
